[gd_scene load_steps=35 format=3 uid="uid://cdwsgkhmhdmr7"]

[ext_resource type="Script" uid="uid://xn3cqogo0ihe" path="res://Scenes/menu.gd" id="1_bnmbb"]
[ext_resource type="Texture2D" uid="uid://pw7pyhimcd3o" path="res://Menu/Main Menu BG.png" id="2_00436"]
[ext_resource type="Texture2D" uid="uid://6hsli6d8xt11" path="res://Menu/StartIdle.tres" id="3_jql0j"]
[ext_resource type="Texture2D" uid="uid://drqydi31yr7md" path="res://Menu/crowd_titleA2.png" id="3_lvy56"]
[ext_resource type="Texture2D" uid="uid://okuirdtjbuy5" path="res://Menu/crowd_titleB2.png" id="4_48g0d"]
[ext_resource type="Texture2D" uid="uid://cnaof16rmwvxa" path="res://Menu/StartClick.tres" id="4_dpu6p"]
[ext_resource type="Texture2D" uid="uid://dwbagu0336dea" path="res://Menu/StartHov.tres" id="5_6hkqq"]
[ext_resource type="Texture2D" uid="uid://cc502rxhxfsqv" path="res://Menu/CreditIdle.tres" id="6_q6fgt"]
[ext_resource type="Texture2D" uid="uid://bnvxrtswirwa6" path="res://Menu/CreditClick.tres" id="7_5mqw3"]
[ext_resource type="Texture2D" uid="uid://dj1qy4epdwl3w" path="res://Menu/crowd_startText.png" id="7_pde1v"]
[ext_resource type="Texture2D" uid="uid://dkca0r588x8q5" path="res://Menu/CreditHov.tres" id="8_c11jv"]
[ext_resource type="Texture2D" uid="uid://jy6h23w41vj3" path="res://Menu/QuitIdle.tres" id="9_uwgos"]
[ext_resource type="Texture2D" uid="uid://orss8vskrsiu" path="res://Menu/QuitClick.tres" id="10_wb156"]
[ext_resource type="Texture2D" uid="uid://dtmgcvgmydpji" path="res://Menu/QuitHover.tres" id="11_3qtpb"]
[ext_resource type="Texture2D" uid="uid://dkkd2dspmw6os" path="res://Menu/crowd_creditslabel.png" id="11_x0760"]
[ext_resource type="Texture2D" uid="uid://cgrfdhnmxi2cp" path="res://Menu/ReturnIdle.tres" id="12_44kdy"]
[ext_resource type="Texture2D" uid="uid://bi8weaybligag" path="res://Menu/ReturnHov.tres" id="13_0s4ya"]
[ext_resource type="Texture2D" uid="uid://ctwiy31gn2grt" path="res://Menu/ReturnClick.tres" id="14_6mvqt"]
[ext_resource type="Texture2D" uid="uid://ijvt1kwky005" path="res://Menu/CreditBG.png" id="15_dgj8l"]
[ext_resource type="Texture2D" uid="uid://b1dnx8hl5pb8x" path="res://Menu/crowd_quitlabel.png" id="15_lvy56"]
[ext_resource type="Texture2D" uid="uid://cn27tg2vg6ohv" path="res://Assets/NoMuteIdle.tres" id="16_8yx3d"]
[ext_resource type="Texture2D" uid="uid://dtfmvuik2i5q8" path="res://Assets/NoMuteHov.tres" id="17_xvwup"]
[ext_resource type="Texture2D" uid="uid://do8k805lf5ern" path="res://Assets/MuteIdle.tres" id="18_y20eb"]
[ext_resource type="Texture2D" uid="uid://bgmnfxm0p2yar" path="res://Assets/MuteHov.tres" id="19_7piji"]
[ext_resource type="Texture2D" uid="uid://1rv8ohbffshe" path="res://Assets/HomeIdle.tres" id="20_kt2pj"]
[ext_resource type="Texture2D" uid="uid://bvxvclss1scs6" path="res://Assets/HomeHov.tres" id="21_ojqq6"]
[ext_resource type="Texture2D" uid="uid://du08q1pjwmkt" path="res://Assets/HomeClick.tres" id="22_7ls7b"]
[ext_resource type="AudioStream" uid="uid://brny4hble2gea" path="res://Sounds/Quirky Dog.mp3" id="24_l6llh"]
[ext_resource type="Script" uid="uid://c6sp2koiw7ixr" path="res://Scenes/AudioMangMenu.gd" id="24_nakb8"]
[ext_resource type="AudioStream" uid="uid://b13s1ratnq2gg" path="res://Sounds/721503__baggonotes__button_click2_1.wav" id="25_ocger"]
[ext_resource type="AudioStream" uid="uid://dxvlvty35l22u" path="res://Sounds/390561__iut_paris8__alison_barreau_2016_2017_oldvideogame_1.wav" id="26_jbv25"]
[ext_resource type="AudioStream" uid="uid://d3hojyku4uvss" path="res://Sounds/ButtonHoverAudio.wav" id="27_nakb8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ygxe1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lvy56")
}, {
"duration": 1.0,
"texture": ExtResource("4_48g0d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_30frw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jql0j")
}, {
"duration": 1.0,
"texture": ExtResource("5_6hkqq")
}, {
"duration": 1.0,
"texture": ExtResource("4_dpu6p")
}, {
"duration": 1.0,
"texture": ExtResource("6_q6fgt")
}, {
"duration": 1.0,
"texture": ExtResource("8_c11jv")
}, {
"duration": 1.0,
"texture": ExtResource("7_5mqw3")
}, {
"duration": 1.0,
"texture": ExtResource("9_uwgos")
}, {
"duration": 1.0,
"texture": ExtResource("11_3qtpb")
}, {
"duration": 1.0,
"texture": ExtResource("10_wb156")
}, {
"duration": 1.0,
"texture": ExtResource("12_44kdy")
}, {
"duration": 1.0,
"texture": ExtResource("13_0s4ya")
}, {
"duration": 1.0,
"texture": ExtResource("14_6mvqt")
}, {
"duration": 1.0,
"texture": ExtResource("16_8yx3d")
}, {
"duration": 1.0,
"texture": ExtResource("17_xvwup")
}, {
"duration": 1.0,
"texture": ExtResource("18_y20eb")
}, {
"duration": 1.0,
"texture": ExtResource("19_7piji")
}, {
"duration": 1.0,
"texture": ExtResource("20_kt2pj")
}, {
"duration": 1.0,
"texture": ExtResource("21_ojqq6")
}, {
"duration": 1.0,
"texture": ExtResource("22_7ls7b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnmbb")

[node name="MenuBG" type="Sprite2D" parent="."]
position = Vector2(800, 500)
scale = Vector2(0.625, 0.625)
texture = ExtResource("2_00436")

[node name="Title" type="AnimatedSprite2D" parent="."]
position = Vector2(790, 130)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ygxe1")
autoplay = "default"
frame_progress = 0.0464458

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 360.0
offset_right = 240.0
offset_bottom = 387.0
scale = Vector2(10, 10)
texture_normal = ExtResource("3_jql0j")
texture_pressed = ExtResource("4_dpu6p")
texture_hover = ExtResource("5_6hkqq")
stretch_mode = 3

[node name="Start" type="Sprite2D" parent="StartButton"]
position = Vector2(29.9, 13.6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_pde1v")

[node name="CreditButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1090.0
offset_top = 420.0
offset_right = 1120.0
offset_bottom = 436.0
scale = Vector2(10, 10)
texture_normal = ExtResource("6_q6fgt")
texture_pressed = ExtResource("7_5mqw3")
texture_hover = ExtResource("8_c11jv")
stretch_mode = 3

[node name="Credit" type="Sprite2D" parent="CreditButton"]
position = Vector2(15, 7.9)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x0760")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1100.0
offset_top = 650.0
offset_right = 1128.0
offset_bottom = 665.0
scale = Vector2(10, 10)
texture_normal = ExtResource("9_uwgos")
texture_pressed = ExtResource("10_wb156")
texture_hover = ExtResource("11_3qtpb")
stretch_mode = 3

[node name="Quit" type="Sprite2D" parent="QuitButton"]
position = Vector2(14.1, 7.6)
scale = Vector2(0.2, 0.2)
texture = ExtResource("15_lvy56")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_30frw")

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="CreditBG" type="Sprite2D" parent="Credits"]
position = Vector2(800, 500)
scale = Vector2(0.625, 0.625)
texture = ExtResource("15_dgj8l")

[node name="ReturnButton" type="TextureButton" parent="Credits"]
layout_mode = 0
offset_left = 1430.0
offset_top = 40.0
offset_right = 1445.0
offset_bottom = 55.0
scale = Vector2(10, 10)
texture_normal = ExtResource("12_44kdy")
texture_pressed = ExtResource("14_6mvqt")
texture_hover = ExtResource("13_0s4ya")
stretch_mode = 3

[node name="Credit title" type="Sprite2D" parent="Credits"]
position = Vector2(800, 91)
scale = Vector2(2.1, 2.1)
texture = ExtResource("11_x0760")

[node name="Audio Mang" type="Node2D" parent="."]
script = ExtResource("24_nakb8")

[node name="MenuBG" type="AudioStreamPlayer" parent="Audio Mang"]
stream = ExtResource("24_l6llh")
volume_db = -20.0
parameters/looping = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="Audio Mang"]
stream = ExtResource("25_ocger")
volume_db = -12.0

[node name="Stinger" type="AudioStreamPlayer" parent="Audio Mang"]
stream = ExtResource("26_jbv25")
volume_db = -17.0
pitch_scale = 1.41

[node name="Hov" type="AudioStreamPlayer" parent="Audio Mang"]
stream = ExtResource("27_nakb8")
volume_db = -5.0

[connection signal="mouse_entered" from="StartButton" to="Audio Mang" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="Audio Mang" method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="CreditButton" to="Audio Mang" method="_on_credit_button_mouse_entered"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="CreditButton" to="Audio Mang" method="_on_credit_button_pressed"]
[connection signal="mouse_entered" from="QuitButton" to="Audio Mang" method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="QuitButton" to="Audio Mang" method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="Credits/ReturnButton" to="Audio Mang" method="_on_return_button_mouse_entered"]
[connection signal="pressed" from="Credits/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Credits/ReturnButton" to="Audio Mang" method="_on_return_button_pressed"]
